crates/ruff_python_parser/tests/snapshots/valid_syntax@except_stmt_unparenthesized_tuple_no_as_py314.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..117,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 44..79,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 53..57,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 58..79,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Tuple(
                                        ExprTuple {
                                            node_index: NodeIndex(None),
                                            range: 65..69,
                                            elts: [
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 65..66,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 68..69,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                            ctx: Load,
                                            parenthesized: false,
                                            runtime_elts: None,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 75..79,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 80..116,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 89..93,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 94..116,
                                node_index: NodeIndex(None),
                                type_: Some(
                                    Tuple(
                                        ExprTuple {
                                            node_index: NodeIndex(None),
                                            range: 102..106,
                                            elts: [
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 102..103,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 105..106,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                            ctx: Load,
                                            parenthesized: false,
                                            runtime_elts: None,
                                        },
                                    ),
                                ),
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 112..116,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: true,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
